--- a/index.html
+++ b/index.html
@@ -4,11 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Image Classification Site</title>
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="main.css">
 </head>
 <body>
-    <h1>Object Classifer</h1>
+    <header class="top-bar">
+        <img src="logo.png" alt="Logo" class="logo">
+        <h1>Object Classifer</h1>
+    </header>
     <p class="lead">Upload Your Image Below</p>
     <div id="preview-container" class="image-preview-placeholder">
         Click Select to choose an image.
@@ -21,5 +24,6 @@
     </form>
 
     <script src="upload.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
