--- a/results.html
+++ b/results.html
@@ -4,11 +4,14 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Image Classification Site</title>
-        <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
         <link rel="stylesheet" type="text/css" href="results.css">
     </head>
 <body>
-    <h1>Object Classifer</h1>
+    <header class="top-bar">
+        <img src="logo.png" alt="Logo" class="logo">
+        <h1>Object Classifer</h1>
+    </header>
     <p class="lead">Here Is The Result of The Classification</p>
     <div id="output-container" style="margin-top: 20px;">
         <!-- Output Image with classification results will be inserted here -->
@@ -16,6 +19,7 @@
     <a href="index.html" class="btn btn-info button-select">Upload Another Image</a>
 
     <script src="results.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
 
 </body>
 </html>
