--- a/index.html
+++ b/index.html
@@ -8,19 +8,21 @@
     <link rel="stylesheet" type="text/css" href="main.css">
 </head>
 <body>
-    <header class="top-bar">
+    <header class="top-bar"> <!--top bar that displays wesbite logo and title-->
         <img src="logo.png" alt="Logo" class="logo">
         <h1>Object Classifer</h1>
     </header>
     <p class="lead">Upload Your Image Below</p>
     <div id="preview-container" class="image-preview-placeholder">
+        <!--placeholder box shown before selecting an image-->
         Click Select to choose an image.
     </div>
     <form id="upload-form" enctype="multipart/form-data">
         <input type="file" id="image-input" name="image" accept="image/png, image/jpeg, image/gif" multiple hidden />
         <button type="button" class="btn btn-danger button-select" onclick="document.getElementById('image-input').click();">Select</button>
         <button type="submit" class="btn btn-primary button-upload">Upload</button>
-
+        <!--upload form accepts most popular image formats and allows for selecting multiple images-->
+        <!--use bootstrap button classes to colour the buttons red and blue-->
     </form>
 
     <script src="upload.js"></script>
