--- a/results.html
+++ b/results.html
@@ -8,15 +8,16 @@
         <link rel="stylesheet" type="text/css" href="results.css">
     </head>
 <body>
-    <header class="top-bar">
+    <header class="top-bar"> <!--top bar that displays wesbite logo and title-->
         <img src="logo.png" alt="Logo" class="logo">
         <h1>Object Classifer</h1>
     </header>
     <p class="lead">Here Is The Result of The Classification</p>
     <div id="output-container" style="margin-top: 20px;">
-        <!-- Output Image with classification results will be inserted here -->
+        <!--output image with classification results is inserted here-->
     </div>
     <a href="index.html" class="btn btn-info button-select">Upload Another Image</a>
+    <!--navigate back to upload page on user request-->
 
     <script src="results.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
